@@ -44,11 +44,10 @@ class CcdcSearchExecTests(unittest.TestCase):
         self.__workPath = os.path.join(HERE, "test-output")
         self.__dataPath = os.path.join(HERE, "test-data")
         self.__molFileDirPath = os.path.join(self.__dataPath, "molfiles")
-        self.__simResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_sim_cli")
         self.__ssResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_ss_cli")
         self.__logPath = os.path.join(self.__workPath, "execStdout.log")
         # path to the CSD and python interpreter where the CCDC api is installed.
-        self.__pythonPath = os.environ["CSD_PYTHON_PATH"]
+        self.__pythonBinPath = os.path.join(os.environ["CSD_PYTHON_ROOT_PATH"], "bin", "python")
         self.__csdHome = os.environ["CSDHOME"]
         #
         self.__queryListFilePath = os.path.join(self.__workPath, "query_list.txt")
@@ -77,7 +76,7 @@ class CcdcSearchExecTests(unittest.TestCase):
             logger.info("cmdPath %r", cmdPath)
             ok = exU.runShell(
                 "%s %s --mol_list_path %s --result_path %s --search_type %s --csdhome %s"
-                % (self.__pythonPath, cmdPath, self.__queryListFilePath, self.__ssResultPath, "substructure", self.__csdHome),
+                % (self.__pythonBinPath, cmdPath, self.__queryListFilePath, self.__ssResultPath, "substructure", self.__csdHome),
                 outPath=self.__logPath,
                 outAppend=False,
                 timeOut=60,
