@@ -28,7 +28,7 @@ import os.path
 import platform
 import resource
 
-from rcsb.utils.ccdc.CcdcSearchMp import CcdcSearchMp
+from rcsb.utils.ccdc.CcdcSearchExecMp import CcdcSearchExecMp
 
 from rcsb.utils.ccdc import __version__
 
@@ -43,17 +43,16 @@ logger.setLevel(logging.INFO)
 
 class CcdcSearchMpTests(unittest.TestCase):
     def setUp(self):
-        self.__verbose = True
-        self.__debug = True
         self.__workPath = os.path.join(HERE, "test-output")
         self.__dataPath = os.path.join(HERE, "test-data")
         self.__cachePath = os.path.join(HERE, "test-output", "CACHE")
         self.__molFilePath = os.path.join(self.__dataPath, "molfiles")
-        self.__simResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_sim")
-        self.__ssResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_ss")
+        self.__pythonRootPath = os.path.join(os.environ["CSD_PYTHON_ROOT_PATH"])
+        self.__csdHome = os.environ["CSDHOME"]
         #
-        self.__targetListFilePath = os.path.join(HERE, "test-data", "ccid_exercise_list.txt")
-
+        self.__simResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_sim")
+        self.__ssResultPath = os.path.join(self.__workPath, "test_chem_comp_ccdc_ss_exec")
+        #
         self.__startTime = time.time()
         logger.info("Starting %s (%s) at %s", self.id(), __version__, time.strftime("%Y %m %d %H:%M:%S", time.localtime()))
 
@@ -64,15 +63,14 @@ class CcdcSearchMpTests(unittest.TestCase):
         endTime = time.time()
         logger.info("Completed %s at %s (%.4f seconds)", self.id(), time.strftime("%Y %m %d %H:%M:%S", time.localtime()), endTime - self.__startTime)
 
-    @unittest.skip("Multiprocessing is broken with latest library")
-    def testSubStructureSearchMp(self):
+    def testSubStructureSearchExecMp(self):
         """Test case:  CCDC similarity search"""
         try:
-            pL = glob.glob(os.path.join(self.__molFilePath, "*"))
+            pL = glob.glob(os.path.join(self.__molFilePath, "*.mol2"), recursive=True)
             logger.info("search list length %d", len(pL))
             #
-            csmp = CcdcSearchMp()
-            csmp.runSearch(pL, self.__ssResultPath, searchType="substructure", numProc=1)
+            csmp = CcdcSearchExecMp(pythonRootPath=self.__pythonRootPath, csdHome=self.__csdHome)
+            csmp.runSearch(pL, self.__ssResultPath, searchType="substructure", numProc=2, chunkSize=2)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
             self.fail()
@@ -80,7 +78,7 @@ class CcdcSearchMpTests(unittest.TestCase):
 
 def suiteSearchTests():
     suiteSelect = unittest.TestSuite()
-    suiteSelect.addTest(CcdcSearchMpTests("testSubStructureSearchMp"))
+    suiteSelect.addTest(CcdcSearchMpTests("testSubStructureSearchExecMp"))
     return suiteSelect
 
 
